@@ -421,10 +421,22 @@ describe UnixUtils do
       File.extname(UnixUtils.tmp_path("dirname1/dirname2/basename.extname", '.foobar')).must_equal '.foobar'
     end
     it "doesn't create excessively long filenames" do
-      100.times { File.basename(UnixUtils.tmp_path("a"*5000)).length.must_be :<, 256 }
+      100.times { File.basename(UnixUtils.tmp_path("a"*5000)).length.must_equal(255) }
     end
     it "doesn't include directory part of ancestor" do
       UnixUtils.tmp_path("dirname1/dirname2/basename.extname").wont_include 'dirname1'
+    end
+    it "includes unix_utils part only once" do
+      one = UnixUtils.tmp_path('basename.extname')
+      File.basename(one).start_with?('unix_utils').must_equal true
+      one.scan(/unix_utils/).length.must_equal 1
+      again = UnixUtils.tmp_path(one)
+      File.basename(again).start_with?('unix_utils').must_equal true
+      again.scan(/unix_utils/).length.must_equal 1
+      and_again = UnixUtils.tmp_path(again)
+      File.basename(and_again).start_with?('unix_utils').must_equal true
+      and_again.scan(/unix_utils/).length.must_equal 1
+      and_again.must_include('basename_extname')
     end
   end
 
