@@ -7,6 +7,7 @@ unreleased
 * Enhancements
 
   * If you call a method with _s at the end, you get a string back. For example: UnixUtils.head_s
+  * UnixUtils.tmp_path no longer junks up tmp paths with lots of "unix_utils_RANDOMSTRING"
 
 0.0.9 / 2012-04-12
 
